# odroid-screen.py

./: Makefile  main.py  pyproject.toml  run.bat
